--- a/FaceRecognition/Base.lproj/Main.storyboard
+++ b/FaceRecognition/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vff-T9-lCP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="e9M-aB-xOm">
-                                <rect key="frame" x="0.0" y="44" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="720"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vr5-6E-Msb">
                                     <size key="itemSize" width="50" height="50"/>
@@ -27,13 +27,40 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="pOO-0P-3fF" customClass="CustomCell" customModule="FaceRecognition" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="376" height="378"/>
+                                        <rect key="frame" x="0.0" y="171" width="376" height="378"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Pqw-Si-1e0">
                                             <rect key="frame" x="0.0" y="0.0" width="376" height="378"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nvI-td-hiA">
+                                                    <rect key="frame" x="0.0" y="0.0" width="376" height="348"/>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJU-bv-g70">
+                                                    <rect key="frame" x="0.0" y="348" width="376" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="PmR-EC-1n8"/>
+                                                    </constraints>
+                                                    <state key="normal" title="View Cropped Faces"/>
+                                                    <connections>
+                                                        <action selector="didTapToViewCroppedFaces:" destination="pOO-0P-3fF" eventType="touchUpInside" id="B8C-Fw-BAh"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="zJU-bv-g70" secondAttribute="trailing" id="3Hm-wE-F4W"/>
+                                                <constraint firstItem="zJU-bv-g70" firstAttribute="top" secondItem="nvI-td-hiA" secondAttribute="bottom" id="49K-4a-Wgt"/>
+                                                <constraint firstItem="zJU-bv-g70" firstAttribute="leading" secondItem="Pqw-Si-1e0" secondAttribute="leading" id="6hQ-Bi-1mO"/>
+                                                <constraint firstItem="nvI-td-hiA" firstAttribute="leading" secondItem="Pqw-Si-1e0" secondAttribute="leading" id="NCY-Cr-OJB"/>
+                                                <constraint firstAttribute="trailing" secondItem="nvI-td-hiA" secondAttribute="trailing" id="W98-6m-TWg"/>
+                                                <constraint firstAttribute="bottom" secondItem="zJU-bv-g70" secondAttribute="bottom" id="gVs-F1-keH"/>
+                                                <constraint firstItem="nvI-td-hiA" firstAttribute="top" secondItem="Pqw-Si-1e0" secondAttribute="top" id="kSF-8L-5pa"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="376" height="378"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="nvI-td-hiA" id="Csk-UL-8fj"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -47,13 +74,93 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="lMu-q8-4gG"/>
                     <connections>
                         <outlet property="collectionView" destination="e9M-aB-xOm" id="e2p-HG-P4e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="-17"/>
+            <point key="canvasLocation" x="908.69565217391312" y="-17.410714285714285"/>
+        </scene>
+        <!--Crop Face View Controller-->
+        <scene sceneID="kmD-cD-RaU">
+            <objects>
+                <viewController storyboardIdentifier="CropFaceViewController" id="0J5-Eh-wgP" customClass="CropFaceViewController" customModule="FaceRecognition" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hpr-om-cQf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NgF-pw-yVU">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Fba-xF-mns">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cropFaceCell" id="LPg-Gv-2d7" customClass="CropFaceCustomCell" customModule="FaceRecognition" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="127" height="131"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="4VY-bb-thQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="127" height="131"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vyH-A3-aZv">
+                                                    <rect key="frame" x="0.0" y="4.5" width="127" height="122"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vyH-A3-aZv" firstAttribute="centerX" secondItem="4VY-bb-thQ" secondAttribute="centerX" id="aWy-rr-KzB"/>
+                                                <constraint firstItem="vyH-A3-aZv" firstAttribute="height" secondItem="4VY-bb-thQ" secondAttribute="height" multiplier="0.931298" id="dQi-gd-yy7"/>
+                                                <constraint firstItem="vyH-A3-aZv" firstAttribute="centerY" secondItem="4VY-bb-thQ" secondAttribute="centerY" id="sdy-jE-OMs"/>
+                                                <constraint firstItem="vyH-A3-aZv" firstAttribute="width" secondItem="4VY-bb-thQ" secondAttribute="width" id="szm-yC-Eyh"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="127" height="131"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="vyH-A3-aZv" id="sWa-XU-8Y2"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="NgF-pw-yVU" firstAttribute="bottom" secondItem="y5E-Yp-SjL" secondAttribute="bottom" id="BHQ-WD-YXf"/>
+                            <constraint firstItem="NgF-pw-yVU" firstAttribute="top" secondItem="y5E-Yp-SjL" secondAttribute="top" id="ZMv-Ox-r1H"/>
+                            <constraint firstItem="NgF-pw-yVU" firstAttribute="trailing" secondItem="y5E-Yp-SjL" secondAttribute="trailing" id="cvf-52-rK9"/>
+                            <constraint firstItem="NgF-pw-yVU" firstAttribute="leading" secondItem="y5E-Yp-SjL" secondAttribute="leading" id="wmD-SC-hcP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="y5E-Yp-SjL"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="NgF-pw-yVU" id="9Zk-zB-BKa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ue0-FJ-CKa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1876.8115942028987" y="-62.276785714285708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kmz-P5-M6C">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vff-T9-lCP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ghq-Bt-gI7">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EC4-ch-XEF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UVU-40-Bm6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1.4492753623188408" y="-17.410714285714285"/>
         </scene>
     </scenes>
 </document>
